fix: mobile responsiveness horizontal overflow issue

--- a/src/main.css
+++ b/src/main.css
@@ -350,6 +350,7 @@ a {
 html {
   width: 100%;
   height: 100%;
+  overflow-x: hidden;
   font-family: sans-serif;
   font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
@@ -360,7 +361,7 @@ body {
   position: relative;
   width: 100%;
   min-width: 360px;
-  overflow-x: unset !important;
+  overflow-x: hidden !important;
   font: normal 400 var(--_size)/1.4 var(--_font-default);
   text-rendering: optimizeLegibility;
   background-color: var(--base);
